--- a/theme/boost/scss/moodle/admin.scss
+++ b/theme/boost/scss/moodle/admin.scss
@@ -664,3 +664,94 @@
         background-color: $state-success-bg;
     }
 }
+
+.autoCompleteCustom {
+    display: grid;
+    right: 0;
+    position: absolute;
+}
+
+.autoCompleteCustom li > i {
+    color: $primary;
+}
+.autoCompleteCustom > input {
+    width: 370px;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 1rem;
+    color: #747474;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, .2);
+    outline: 0;
+}
+.autoCompleteCustom > ul > div.no_result {
+    margin: 0.3rem;
+    padding: 0.3rem 0.5rem;
+    list-style: none;
+    text-align: left;
+    font-size: 1rem;
+    color: #212121;
+    transition: all 0.1s ease-in-out;
+    border-radius: 0.35rem;
+    background-color: rgba(255, 255, 255, 1);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    outline: none;
+}
+.autoCompleteCustom > ul > div.header_result {
+    text-align: center;
+    background-color: #cce6ea;
+    padding: 5px;
+}
+.autoCompleteCustom > input::placeholder {
+    color: rgba(123, 123, 123, .5);
+    transition: all .3s ease;
+}
+.autoCompleteCustom > ul {
+    max-height: 450px;
+    overflow-y: scroll;
+    top: 100%;
+    left: 0;
+    right: 0;
+    padding: 0;
+    margin: .5rem 4.5rem 0 4.5rem;
+    border-radius: 4px;
+    background-color: #fff;
+    border: 2px solid rgba(206, 169, 169, .5);
+    z-index: 1000;
+    outline: 0;
+}
+.autoCompleteCustom > ul > li {
+    padding: 10px 20px;
+    list-style: none;
+    text-align: left;
+    font-size: 16px;
+    color: #212121;
+    transition: all .1s ease-in-out;
+    border-radius: 3px;
+    background-color: #fff;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.autoCompleteCustom > ul > li::selection {
+    color: #fff;
+    background-color: #fff;
+}
+.autoCompleteCustom > ul > li:hover {
+    cursor: pointer;
+    background-color: $light;
+}
+.autoCompleteCustom > ul > li mark {
+    background-color: transparent;
+    color: #000;
+    font-weight: 700;
+}
+.autoCompleteCustom > ul > li mark::selection {
+    color: #fff;
+    background-color: #fff;
+}
+.autoCompleteCustom > ul > li[aria-selected=true] {
+    background-color: rgba(123, 123, 123, .1);
+}
