MDL-78619 theme: Communication button fixes
The footer button was missing some CSS to factor in the blocks drawer.
Also added noreferrer to the window.open call made when clicking the
communication button, to avoid the risks associated with opening in
_blank without removing access to the referrer and opener (noopener is
implicitly defined in modern browsers when noreferrer is set).

--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -29610,12 +29610,14 @@ span.editinstructions .alert-link {
   [data-region=drawer] {
     padding: 20px 20px;
   }
-  .jsenabled .btn-footer-popover {
+  .jsenabled .btn-footer-popover,
+  .jsenabled .btn-footer-communication {
     transition: 0.2s;
   }
 }
 @media (min-width: 576px) and (prefers-reduced-motion: reduce) {
-  .jsenabled .btn-footer-popover {
+  .jsenabled .btn-footer-popover,
+  .jsenabled .btn-footer-communication {
     transition: none;
   }
 }
@@ -36600,7 +36602,7 @@ span[data-flexitour=container][x-placement=right] div[data-role=arrow]:after, sp
     margin-right: 315px;
     padding-right: 1rem;
   }
-  .jsenabled #page.drawers.show-drawer-right .btn-footer-popover {
+  .jsenabled #page.drawers.show-drawer-right .btn-footer-popover, .jsenabled #page.drawers.show-drawer-right .btn-footer-communication {
     right: calc(315px + 2rem);
   }
 }
