--- a/admin/tool/mfa/templates/guide_link.mustache
+++ b/admin/tool/mfa/templates/guide_link.mustache
@@ -23,8 +23,6 @@
     {
     }
 }}
-<div class='my-2'>
-    <h4>
-        <a href='{{config.wwwroot}}/admin/tool/mfa/guide.php'> {{#str}} guidance, tool_mfa {{/str}} </a>
-    </h4>
-</div>
+<a href='{{config.wwwroot}}/admin/tool/mfa/guide.php'>
+    {{#str}} guidance, tool_mfa {{/str}}<i class="icon fa fa-external-link fa-fw ml-1" aria-hidden="true"></i>
+</a>
