--- a/admin/tool/mfa/templates/guide_link.mustache
+++ b/admin/tool/mfa/templates/guide_link.mustache
@@ -24,5 +24,5 @@
     }
 }}
 <a href='{{config.wwwroot}}/admin/tool/mfa/guide.php'>
-    {{#str}} guidance, tool_mfa {{/str}}<i class="icon fa fa-external-link fa-fw ml-1" aria-hidden="true"></i>
+    {{#str}} guidance, tool_mfa {{/str}}
 </a>
